--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/CSSFIRSTVERSION.min.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+
 </head>
 <body>
 <div data-role="panel" id="SideMenu" data-position="left" data-display="overlay" data-theme="a">
@@ -50,7 +51,7 @@
         <li data-icon="false"><a href="#">Matches</a></li>
     </ul>
 </div>
-<div data-role="page" id="HM" data-theme="b">
+<div data-role="page" id="HM" data-theme="b" class="SSP">
 
     <div data-role="header">
         <a href="#SideMenu" data-icon="bars" data-iconpos="notext" style="border: none;"></a>
