--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
         <div class="ui-grid-b ui-responsive">
             <div class="ui-block-a" style="width: 10%"></div>
 
-            <div class="ui-block-b"><img src="" class="bigimg"></div>
+            <div class="ui-block-b "><img src="" class="bigimg circle"></div>
             <div class="ui-block-c" style="width: 10%"></div>
         </div><br>
         <div class="ui-grid-a">
@@ -148,10 +148,10 @@
                 <li><a href="#" >Soduko match in Seattle</a></li>
                 <li><a href="#" >League Championship in Seattle</a></li>
                 <li><a href="#" >Table Tennis with Jake</a></li>
-                <li><input type="button" data-icon="plus" data-theme="b" value="Add New Matches"/></li>
+                <li><input type="button" data-icon="plus" data-theme="e" value="Add New Matches"/></li>
             </ul>
         </div>
-        <div data-role="collapsible" data-inset="false" id="missedmatches" data-content-theme="b">
+        <div data-role="collapsible" data-inset="false" id="missedmatches" data-content-theme="d" data-theme="b">
             <h3>You missed<span id="MatchesyouMissed"> X </span>Matches</h3>
             <ul data-role="listview">
                 <li><a href="#" class="MissedMatch">A scrabble Match with Jane</a></li>
@@ -163,7 +163,7 @@
         <div data-role="collapsible" data-inset="false" id="matchesyouareinvitedto">
             <h3>Matches you are invited to </h3>
             <ul data-role="listview">
-                <li><a href="#" data-icon="carat-r" data-theme="a">LOL Training session N°13</a></li>
+                <li><a href="#" data-icon="carat-r" data-theme="a">LOL Training session N°13<input type="button" value="Decline" data-theme="a" class="inlinebtn"></a></li>
             </ul>
         </div>
     </div>
