--- a/www/index.html
+++ b/www/index.html
@@ -163,7 +163,11 @@
         <div data-role="collapsible" data-inset="false" id="matchesyouareinvitedto">
             <h3>Matches you are invited to </h3>
             <ul data-role="listview">
-                <li><a href="#" data-icon="carat-r" data-theme="a">LOL Training session N°13<input type="button" value="Decline" data-theme="a" class="inlinebtn"></a></li>
+                <li><a href="#1" data-icon="carat-r" data-theme="a" data-rel="popup" data-position-to="origin" data-transition="pop">LOL Training session N°13</a><div id="1" data-role="popup" name="CPanel" class="Cpanel"  data-theme="b"><div data-role="controlgroup" data-type="horizontal">
+                    <input type="button" value="Decilne"  data-theme="a">
+                    <input type="button"  data-theme="e" value="More">
+                </div>
+                </div></li>
             </ul>
         </div>
     </div>
