--- a/www/index.html
+++ b/www/index.html
@@ -42,11 +42,11 @@
 </head>
 <body>
 <div data-role="panel" id="SideMenu" data-position="left" data-display="overlay" data-theme="a">
-    <div class="miniInfo">
-        <img src="" class="miniimg">
-        <h3>Your name here</h3>
-    </div>
     <ul data-role="listview" data-inset="false">
+        <div class="miniInfo">
+            <img src="" class="miniimg">
+            <h3 style="color: #e9e9e9;">Your name here</h3>
+        </div>
         <li data-icon="home"><a href="#">Home</a></li>
         <li data-icon="gear"><a href="">Application settings</a></li>
         <li data-icon="info" data-role="list-divider">Quick Navigation</li>
